src/objects/core_Event__e.object
<CustomObject>
    <fields>
        <fullName>EventCategory__c</fullName>
        <description>Specifies the Category of the Event.</description>
        <label>Event Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventName__c</fullName>
        <description>Specifies the name of the Event.</description>
        <label>Event Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payload__c</fullName>
        <description>The content of the Event.</description>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Platform Event</label>
    <pluralLabel>Platform Events</pluralLabel>
</CustomObject>